2013-04-04  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (new_user): Add DESCRIBE_AUTH call like Administrator
	version had.

	* src/html/oap.xsl (html-create-user-form): Use even for LDAP field.

2013-04-04  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/gsad.xsl (html-gsa-logo): Move user operation indicator icons
	into Manager section, updating paths.

2013-04-04  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad_omp.c (save_user_omp): Remove next variable as it is set but
	not used.

2013-04-04  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (create_user_omp): Update to newer style so that the
	generation of the following page is done by the appropriate handler
	instead of being done manually.  This also corrects the XSL error that
	was occuring on the Users page after creating the user.

2013-04-04  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/oap.xsl: Remove extra extension prefixes from last commit.

2013-04-04  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/oap.xsl: Add str prefix to stylesheet.

2013-04-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/omp.xsl (result-detailed): Fixed width of Severity column
	to harmonize with the new colored bar.

2013-04-03  Matthew Mundell <matthew.mundell@greenbone.net>

	Delete and edit users via OMP instead of OAP.  Add exporting of users.
	Make the user pages more like the other pages.

	* src/gsad.c (exec_omp_get): Switch save_user to OMP.

	* src/gsad_oap.c (save_user_oap): Remove.  Replaced by OMP equivalent.

	* src/gsad_omp.c (edit_resource): Split param check in two for better
	messages.
	(CHECK): New macro.
	(save_user_omp): New function.  OMP equivalent of removed OAP version.

	* src/gsad_oap.h, src/gsad_omp.h: Update headers accordingly.

	* src/html/oap.xsl (user [edit]): Add next and user_id params.

2013-04-03  Matthew Mundell <matthew.mundell@greenbone.net>
