@@ -695,6 +695,9 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
 
 <xsl:template match="get_users">
   <xsl:apply-templates select="gsad_msg"/>
+  <xsl:apply-templates select="../modify_auth_response" mode="show"/>
+  <!-- If any describe_auth was found, match it here -->
+  <xsl:call-template name="describe_auth_response" mode="show"/>
   <xsl:apply-templates select="delete_user_response"/>
   <xsl:apply-templates select="create_user_response"/>
   <xsl:apply-templates select="modify_user_response"/>
